# cnoise

./: .gitattributes  .travis.yml  CMakeLists.txt  README.md  ccpp.yml  travis.yml
.github/workflows/: ccpp.yml  ci.yml
examples/: benchmarks.c  hellonoise.c
include/cnoise/: billownoise.h  cnoise.h  common.h  noisecommon.h  opensimplexnoise.h  perlinnoise.h  ridgedfractalnoise.h  spherenoise.h  voronoinoise.h  whitenoise.h
include/noise/: billownoise.h  common.h  noise.h  opensimplex.h  opensimplexnoise.h  perlinnoise.h  ridgedfractalnoise.h  voronoinoise.h  whitenoise.h  worleynoise.h
src/: benchmarks.c  test.c
